@@ -37,6 +37,7 @@
 	       uploaded = 0, % Amount of uploaded bytes this round
 	       downloaded = 0, % Amount of downloaded bytes this round
 	       remote_i_state = not_interested, % Is this peer interested in us?
+	       local_c_state = choked, % true if we are choking remote
 	       remote_c_state = choked, % true if the remote is choking us.
 	       optimistic_c_state = not_opt_unchoke}). % true if we have selected this peer for opt. unchoke
 
